--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.1.2' apply false
-    id 'com.android.library' version '7.1.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
+
+apply from: "${rootDir}/config.gradle"
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+        maven {
+            url uri("${rootDir}/plugins/repos")
+        }
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.0.2'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.20'
+        classpath "com.leilu.asm.plugins:base:${asm_plugin_version}"
+        classpath "com.leilu.asm.plugins:mylibrary:${asm_plugin_version}"
+    }
+}
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        mavenLocal()
+    }
 }
 
 task clean(type: Delete) {
