--- a/settings.gradle
+++ b/settings.gradle
@@ -1,16 +1,4 @@
-pluginManagement {
-    repositories {
-        gradlePluginPortal()
-        google()
-        mavenCentral()
-    }
-}
-dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
 rootProject.name = "ASM_GRADLE_PLUGIN"
 include ':app'
+include ':plugins:base'
+include ':plugins:mylibrary'
