初步添加hook_method插件工程代码

--- a/plugins/plugin_module_config.gradle
+++ b/plugins/plugin_module_config.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'groovy'
-apply from: "../publish_script.gradle"
+apply from: "${rootDir}/plugins/publish_script.gradle"
 repositories {
     mavenCentral()
     mavenLocal()
