--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'test.plugin'
+apply plugin: 'method_hook.plugin'
 
 android {
     compileSdkVersion rootProject.ext.config.compileSdkVersion
