--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.0.2'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.20'
         classpath "com.leilu.asm.plugins:base:${asm_plugin_version}"
-        classpath "com.leilu.asm.plugins:mylibrary:${asm_plugin_version}"
+        classpath "com.leilu.asm.plugins:method_hook:${asm_plugin_version}"
     }
 }
 allprojects {
