--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = "ASM_GRADLE_PLUGIN"
 include ':app'
 include ':plugins:base'
 include ':plugins:method_hook_plugin:method_hook'
+include ':plugins:thread_schedule:thread_schedule_plugin'
+include ':plugins:thread_schedule:libthread_schedule'
