--- a/plugins/thread_schedule/libthread_schedule/build.gradle
+++ b/plugins/thread_schedule/libthread_schedule/build.gradle
@@ -1,5 +1,10 @@
 plugins {
-    id 'android-library'
+    id 'com.android.library'
+}
+
+android {
+    compileSdkVersion 30
+    buildToolsVersion '29.0.3'
 }
 
 java {
