--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include ':plugins:base'
 include ':plugins:method_hook_plugin:method_hook'
 include ':plugins:thread_schedule:thread_schedule_plugin'
 include ':plugins:thread_schedule:libthread_schedule'
+include ':moudles:login'
