--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,4 @@ include ':plugins:method_hook_plugin:method_hook'
 include ':plugins:thread_schedule:thread_schedule_plugin'
 include ':plugins:thread_schedule:libthread_schedule'
 
+include ':moudles:testjava'
