--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.20'
         classpath "com.leilu.asm.plugins:base:${asm_plugin_version}"
         classpath "com.leilu.asm.plugins:thread_schedule_plugin:${asm_plugin_version}"
-//        classpath "com.leilu.asm.plugins:method_hook:${asm_plugin_version}"
+        classpath "com.leilu.asm.plugins:method_hook:${asm_plugin_version}"
     }
 }
 allprojects {
