--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ include ':plugins:thread_schedule:thread_schedule_plugin'
 include ':plugins:thread_schedule:libthread_schedule'
 
 include ':moudles:testjava'
+include ':plugins:component_plugin:libcompoment'
